removed usages of reflection